# Duelling_Idiots

./: CMakeLists.txt  README.md  ball.cpp  baseball.cpp  bbseason.cpp  blind_spider.cpp  blind_spider1.cpp  blind_spider_MCS.cpp  champ.cpp  coffee.cpp  duel1.cpp  duel2.cpp  duel3.cpp  duplicate_selection.cpp  embarassing.cpp  fly_crcl.cpp  fly_sqr.cpp  garden.cpp  glow.cpp  glow1.cpp  glow2.cpp  glow_p.cpp  glow_s.cpp  inconceivable.cpp  needle.cpp  negativity.cpp  osc_limit.cpp  pert.cpp  poisson.cpp  power.cpp  reliable.cpp  sameflips.cpp  snow1.cpp  snow1_1.cpp  snow2.cpp  snow3.cpp  snow_pi.cpp  tub.cpp  util.h  utilities.hpp
