cmake_minimum_required(VERSION 3.7)
project(duelling_idiots)

set(CMAKE_CXX_STANDARD 20)

add_executable(EMBARRASSING embarassing.cpp)
add_executable(BASEBALL baseball.cpp)
add_executable(DUEL1 duel1.cpp)
add_executable(DUEL2 duel2.cpp)
add_executable(DUEL3 duel3.cpp)
add_executable(DUP_MCS duplicate_selection.cpp)
add_executable(GLOW glow.cpp)
add_executable(GLOW1 glow1.cpp)
add_executable(GLOW2 glow2.cpp)
add_executable(OSC_LIM osc_limit.cpp)
add_executable(SAME_FLIPS sameflips.cpp)
add_executable(SNOW1 snow1.cpp)
add_executable(SNOW2 snow2.cpp)
add_executable(SNOW3 snow3.cpp)
add_executable(BLIND_SPIDER blind_spider.cpp)
add_executable(BLIND_SPIDER1 blind_spider1.cpp)
add_executable(BLIND_SPIDER_MCS blind_spider_MCS.cpp)
add_executable(POISSON poisson.cpp)
add_executable(BALL ball.cpp)
add_executable(BBSEASON bbseason.cpp)
add_executable(SNOW1_1 snow1_1.cpp)
add_executable(SNOW_PI snow_pi.cpp)
add_executable(COFFEE coffee.cpp)
add_executable(CHAMP champ.cpp)
add_executable(NEEDLE needle.cpp)
add_executable(NEGATIVITY negativity.cpp)
add_executable(POWER power.cpp)
add_executable(INCONCEIVABLE inconceivable.cpp)
add_executable(TUB tub.cpp)
add_executable(GARDEN garden.cpp)
add_executable(FLY_SQR fly_sqr.cpp)
add_executable(FLY_CRCL fly_crcl.cpp)
add_executable(RELIABLE reliable.cpp)
